--- a/animation/move.css
+++ b/animation/move.css
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
-    <title> CSS3实现过渡渐隐动画效果 </title>
+    <title> 幸运大转盘 </title>
     
 </head>
 <style>
