--- a/src/App.css
+++ b/src/App.css
@@ -5,25 +5,30 @@
 }
 
 .prize__container {
-  width: 400px;
-  border-radius: 5px;
-  border: 1px solid #eeeeee;
+  width: 500px;
+  height: 400px;
+  border-radius: 3px;
+  border: 5px solid #dc143c;
   margin: 30px 0 0 0;
+  background-color: #FF6347;
 }
 
 .container__area {
-  width: 100%;
-  padding: 10px;
+  width: 500px;
+  height: 400px;
+  padding: 20px;
   box-sizing: border-box;
   position: relative;
 }
 
 .begin__btn {
   width: 100px;
-  height: 40px;
+  height: 50px;
+  font-size: 18px;
+  font-weight: bold;
   border-radius: 4px;
-  background-color: aliceblue;
-  color: #999999;
+  background-color: rgb(243, 196, 96);
+  color: #f10404;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -33,11 +38,14 @@
 }
 
 .charge__btn {
-  width: 80px;
-  height: 40px;
-  border-radius: 4px;
-  background-color: aliceblue;
-  color: #999999;
+  width: 100px;
+  height: 70px;
+  margin: 20px;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 3px;
+  background-color: rgb(243, 244, 245);
+  color: #141414;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,7 +56,7 @@
 
 .area__row {
   width: 100%;
-  height: 100px;
+  height: 120px;
   margin-bottom: 2px;
   display: flex;
   justify-content: space-between;
@@ -56,7 +64,7 @@
 }
 
 .row__item {
-  width: 90px;
+  width: 110px;
   height: 90px;
   border-radius: 4px;
   background-color: #f0f0f0;
@@ -66,5 +74,6 @@
 }
 
 .row__item-active {
-  background-color: aquamarine;
+  background-color: rgb(243, 196, 96);
+  font-weight: bold;
 }
