--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  /* background-image: url("background.png"); */
+  background-color: #FFA500;
+}
+
+p {
+  font-size: 30px;
 }
