--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .goldNum {
   font-size: 30px;
-  padding: 20px;
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 .prize {
@@ -11,11 +12,13 @@
 
 .prize__container {
   width: 500px;
-  height: 400px;
+  height: 450px;
   border-radius: 3px;
   border: 5px solid #dc143c;
   margin: 30px 0 0 0;
   background-color: #FF6347;
+  align-items: center;
+  justify-content: center;
 }
 
 .container__area {
@@ -28,8 +31,8 @@
 
 .begin__btn {
   width: 100px;
-  height: 50px;
-  font-size: 18px;
+  height: 60px;
+  font-size: 20px;
   font-weight: bold;
   border-radius: 4px;
   background-color: rgb(243, 196, 96);
@@ -39,7 +42,7 @@
   justify-content: center;
   position: absolute;
   left: calc(50% - 50px);
-  top: calc(50% - 20px);
+  top: calc(50% - 8px);
 }
 
 .charge__btn {
@@ -60,8 +63,8 @@
 }
 
 .area__row {
-  width: 100%;
-  height: 120px;
+  width: 460px;
+  height: 135px;
   margin-bottom: 2px;
   display: flex;
   justify-content: space-between;
@@ -69,8 +72,9 @@
 }
 
 .row__item {
-  width: 110px;
-  height: 90px;
+  width: 120px;
+  height: 100px;
+  font-size: 16px;
   border-radius: 4px;
   background-color: #f0f0f0;
   display: flex;
