动画部分，我尽力了
<script>
 var gift;
 var x=0;
 //可修改ArrList以定义每一奖项中奖概率;
 var ArrList=[20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35]; 
 //position用于定位每一个抽奖格;
 var position=[0,1,2,5,8,7,6,3];

 function start(){
  var initial=getArrayItems(ArrList,1);
  for (var i = 0; i < initial; i++) {
   setTimeout(()=>{
    $('.prize_container').removeClass("selected");
    prize_container=$('.prize_container:eq('+ position[(x%8)] +')');
    prize_container.addClass('selected');
    x++;
    if (x==initial) {setTimeout(()=>{
     if (position[]==0) {
      alert('Bug:');
     }
     if (position[]==1) {
      alert('恭喜获得奖品:66矿石');
     }
     if (position[]==2) {
      alert('恭喜获得奖品:随机限量徽章');
     }
     if (position[]==3) {
      alert('恭喜获得奖品:掘金限量桌垫');
     }
     if (position[]==5) {
      alert('恭喜获得奖品:掘金新款T恤');
     }
     if (position[]==6) {
      alert('恭喜获得奖品:Yoyo抱枕');
     }
     if (position[]==7) {
      alert('恭喜获得奖品:Switch');
     }
     if (position[]==8) {
      alert('恭喜获得奖品:乐高海洋巨轮');
     }
     console.log(position[(x%8)]);
     x=0;
    },10)}
   },i*150);
  }
 }

 

 function getArrayItems(arr, num) {
     //新建一个数组,将传入的数组复制过来,用于运算,而不要直接操作传入的数组;
     var temp_array = new Array();
     for (var index in arr) {
         temp_array.push(arr[index]);
     }
     //取出的数值项,保存在此数组
     var return_array = new Array();
     for (var i = 0; i<num; i++) {
         //判断如果数组还有可以取出的元素,以防下标越界
         if (temp_array.length>0) {
             //在数组中产生一个随机索引
             var arrIndex = Math.floor(Math.random()*temp_array.length);
             //将此随机索引的对应的数组元素值复制出来
             return_array[i] = temp_array[arrIndex];
             //然后删掉此索引的数组元素,这时候temp_array变为新的数组
             temp_array.splice(arrIndex, 1);
         } else {
             //数组中数据项取完后,退出循环,比如数组本来只有10项,但要求取出20项.
             break;
         }
     }
     return return_array;
 }
</script>

--- a/src/App.css
+++ b/src/App.css
@@ -86,3 +86,89 @@
   background-color: rgb(243, 196, 96);
   font-weight: bold;
 }
+
+
+
+
+
+
+
+
+
+
+
+<script>
+ var gift;
+ var x=0;
+ //可修改ArrList以定义每一奖项中奖概率;
+ var ArrList=[20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35]; 
+ //position用于定位每一个抽奖格;
+ var position=[0,1,2,5,8,7,6,3];
+
+ function start(){
+  var initial=getArrayItems(ArrList,1);
+  for (var i = 0; i < initial; i++) {
+   setTimeout(()=>{
+    $('.prize_container').removeClass("selected");
+    prize_container=$('.prize_container:eq('+ position[(x%8)] +')');
+    prize_container.addClass('selected');
+    x++;
+    if (x==initial) {setTimeout(()=>{
+     if (position[]==0) {
+      alert('Bug:');
+     }
+     if (position[]==1) {
+      alert('恭喜获得奖品:66矿石');
+     }
+     if (position[]==2) {
+      alert('恭喜获得奖品:随机限量徽章');
+     }
+     if (position[]==3) {
+      alert('恭喜获得奖品:掘金限量桌垫');
+     }
+     if (position[]==5) {
+      alert('恭喜获得奖品:掘金新款T恤');
+     }
+     if (position[]==6) {
+      alert('恭喜获得奖品:Yoyo抱枕');
+     }
+     if (position[]==7) {
+      alert('恭喜获得奖品:Switch');
+     }
+     if (position[]==8) {
+      alert('恭喜获得奖品:乐高海洋巨轮');
+     }
+     console.log(position[(x%8)]);
+     x=0;
+    },10)}
+   },i*150);
+  }
+ }
+
+ 
+
+ function getArrayItems(arr, num) {
+     //新建一个数组,将传入的数组复制过来,用于运算,而不要直接操作传入的数组;
+     var temp_array = new Array();
+     for (var index in arr) {
+         temp_array.push(arr[index]);
+     }
+     //取出的数值项,保存在此数组
+     var return_array = new Array();
+     for (var i = 0; i<num; i++) {
+         //判断如果数组还有可以取出的元素,以防下标越界
+         if (temp_array.length>0) {
+             //在数组中产生一个随机索引
+             var arrIndex = Math.floor(Math.random()*temp_array.length);
+             //将此随机索引的对应的数组元素值复制出来
+             return_array[i] = temp_array[arrIndex];
+             //然后删掉此索引的数组元素,这时候temp_array变为新的数组
+             temp_array.splice(arrIndex, 1);
+         } else {
+             //数组中数据项取完后,退出循环,比如数组本来只有10项,但要求取出20项.
+             break;
+         }
+     }
+     return return_array;
+ }
+</script>
