--- a/src/App.css
+++ b/src/App.css
@@ -88,16 +88,7 @@
 }
 
 
-
-
-
-
-
-
-
-
-
-<script>
+/* <script>
  var gift;
  var x=0;
  //可修改ArrList以定义每一奖项中奖概率;
@@ -171,4 +162,4 @@
      }
      return return_array;
  }
-</script>
+</script> */
