--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,59 @@
-.goldNum {
-  font-size: 30px;
-  margin-top: 20px;
-  margin-left: 20px;
+.title {
+  font-size: 60px;
+  text-align: center;
+  padding: 40px 20px 20px;
+  background-color: #FFA500;
+} 
+
+.left {
+  position: absolute;
+  top: 144px;
+  left: 0;
+  width: 300px;
+  height: 625px;
+  background-color: #FFA500;
 }
 
-.prize {
-  width: 100%;
-  max-width: 530px;
-  margin: 0 auto;
+.centre {
+  margin-left: 300px;
+  margin-right: 300px;
+  height: 625px;
+  background-color: #FFA500;
+  display: flex;
+  align-items: center;
+}
+
+.right {
+  position: absolute;
+  top: 144px;
+  right: 0;
+  width: 300px;
+  height: 625px;
+  background-color: #FFA500;
+}
+
+.intro {
+  font-size: 17px;
+  padding-left: 50px;
+  font-weight: bold;
+}
+
+.goldNum {
+  width: 100px;
+  height: 50px;
+  font-size: 18px;
+  margin-top: 50px;
+  margin-left: 50px;
+  text-align: center;
+  background-color: rgb(243, 244, 245);
+  border: 2px solid #000000;
+  border-radius: 3px;
+  display:table;
+}
+
+.goldNumText {
+  display:table-cell;
+  vertical-align: middle;
 }
 
 .prize__container {
@@ -15,10 +61,12 @@
   height: 450px;
   border-radius: 3px;
   border: 5px solid #dc143c;
-  margin: 30px 0 0 0;
   background-color: #FF6347;
   align-items: center;
   justify-content: center;
+  position: absolute;
+  margin-top: -50px;
+  margin-left: 210px;
 }
 
 .container__area {
@@ -47,19 +95,19 @@
 
 .charge__btn {
   width: 100px;
-  height: 70px;
-  margin: 20px;
+  height: 50px;
+  margin-top: 20px;
+  margin-left: 50px;
   font-size: 18px;
   font-weight: bold;
+  border: 2px solid #000000;
   border-radius: 3px;
-  background-color: rgb(243, 244, 245);
+  background-color: #FF6347;
   color: #141414;
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  left: calc(50% - 80px);
-  top: calc(75%);
 }
 
 .area__row {
@@ -85,6 +133,21 @@
 .row__item-active {
   background-color: rgb(243, 196, 96);
   font-weight: bold;
+}
+
+.lists{
+  font-size: 20px;
+  font-weight: bold;
+  padding-left: 5px;
+}
+
+.showLists {
+  font-weight: bold;
+}
+
+.listStyle {
+  padding-right: 100px;
+  line-height: 40px;
 }
 
 
