--- a/src/Management.css
+++ b/src/Management.css
@@ -1,12 +1,12 @@
 .prize_form {
-    text-align: center;
-    background-image: linear-gradient(to right, #e4afcb 0%, #b8cbb8 0%, #b8cbb8 0%, #e2c58b 30%, #c2ce9c 64%, #7edbdc 100%);
+    text-align: center;   
+    background-image: linear-gradient(to right, #ffef93 0%, #ffa4c0 100%);
 }
 
 .btn2 {
     padding: 20px 0 0 20px;
     text-align: left;
-    background-image: linear-gradient(to right, #e4afcb 0%, #b8cbb8 0%, #b8cbb8 0%, #e2c58b 30%, #c2ce9c 64%, #7edbdc 100%);
+    background-image: linear-gradient(to right, #ffef93 0%, #ffa4c0 100%);
 }
 
 .title2 {
