--- a/src/Home.css
+++ b/src/Home.css
@@ -126,6 +126,18 @@
   justify-content: space-between;
   align-items: center;
 }
+img{
+  max-width: 75%;
+  max-height: 80%;
+  justify-content: center;
+  display: block;
+}
+
+.caption{
+  font-size: 0.85em;
+  color: #FF6347;
+  display: block;
+}
 
 .row__item {
   width: 120px;
